--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_NETWORK_URL="http://127.0.0.1:8545"
-REACT_APP_CHAIN_ID="31337"
+REACT_APP_NETWORK_URL="https://devnet.specular.network/"
+REACT_APP_CHAIN_ID="93481"
